dnl Process this file with autoconf-2.59 to produce a configure script.

AC_INIT(armsd.c)
AC_CANONICAL_SYSTEM

case "$target" in 
  *-*-linux*)
      AC_SUBST(SYSSRC,"sys_linux.c")
      AC_SUBST(SYSOBJ,"sys_linux.o")
      ;;
  *-*-openbsd*)
      AC_SUBST(SYSSRC,"sys_openbsd.c")
      AC_SUBST(SYSOBJ,"sys_openbsd.o")
      ;;
  *)
      AC_SUBST(SYSSRC,"sys_other.c")
      AC_SUBST(SYSOBJ,"sys_other.o")
      ;;
esac

dnl Checks for programs.
#AC_PROG_CC

dnl Checks for libraries.
AC_SEARCH_LIBS(clock_gettime, rt)

AC_CHECK_LIB(arms, arms_init,,
	     [AC_MSG_ERROR([libarms is missing])])

dnl Checks for header files.
#AC_HEADER_STDC
#AC_CHECK_HEADERS(malloc.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST
#AC_TYPE_SIZE_T
#AC_HEADER_TIME
#AC_STRUCT_TM

dnl Checks for library functions.
#AC_FUNC_MEMCMP
#AC_TYPE_SIGNAL
AC_CHECK_FUNCS(clock_gettime)
AC_CHECK_FUNCS(gettimeofday,,
	     [AC_MSG_ERROR([gettimeofday is missing])])
AC_CHECK_FUNCS(strlcat)

AC_OUTPUT(Makefile)
