noinst_HEADERS =  \
	camconfig.h \
	camserv.h \
	camserv_hack.h \
	camshm.h \
	databuf.h \
	filter.h \
	fixfont.h \
	font_6x11.h \
	font_8x8.h \
	grafxmisc.h \
	hash.h \
	jpgstuff.h \
	list.h \
	log.h \
	mainloop.h \
	manager.h \
	modinfo.h \
	picloop.h \
	sock_field.h \
	socket.h \
	sockset.h \
	video.h 
