#
#  Makefile for the Squid LDAP authentication helper
#
#  $Id: Makefile.am,v 1.1.6.2 2002/07/17 15:30:22 squidadm Exp $
#
#  Uncomment and customize the following to suit your needs:
#

libexec_SCRIPTS 	= wbinfo_group.pl
#man_MANS 		= squid_wbinfo_group.8
#EXTRA_DIST		= squid_wbinfo_group.8
EXTRA_DIST		= wbinfo_group.pl
